질문 상태 색깔 맞춤

--- a/src/main/resources/templates/todo.txt
+++ b/src/main/resources/templates/todo.txt
@@ -1,7 +1,17 @@
-1. detail쪽에서 그림 및 글자 슬라이드로 전환
+1. detail쪽에서 그림 및 글자 슬라이드로 전환 (해결)
 2. 날짜포맷 이쁘게 전환 (해결)
-3. 사진 다운로드
+3. 사진 다운로드(보완필요)
 4. detail 쪽에서 채팅 입력시 reload & scroll 최하단
 5. index.html에서 리뷰도 같이  보이도록 (해결)
-6. list.html에서 리뷰도 같이 보이도록
-7. 상태별 색상 다르게
+6. list.html에서 리뷰도 같이 보이도록 (해결)
+7. 상태별 색상 다르게 (해결)
+
+
+
+서버 수정요청
+1. 결제버튼 눌렀을때 : 상태 결제대기->풀이대기로 바꿀것
+2. 유저회원가입쪽 만들기
+3. /solution 쪽에서 리뷰가 있는 문제만 리턴할것 (state == 5), 최대 5개만
+4. manager, user 테이블 합치는 방향으로 type에서 manager, user, 비회원 구분
+5. 게시물 안의 내용중 줄바꿈기능 (줄바꿈이 \r\n  이나 \n으로 오는지 확인할것)
+6. answers.image_ur -> answer.image_url로 수정
