유저 회원가입 추가

--- a/src/main/resources/templates/todo.txt
+++ b/src/main/resources/templates/todo.txt
@@ -5,6 +5,9 @@
 5. index.html에서 리뷰도 같이  보이도록 (해결)
 6. list.html에서 리뷰도 같이 보이도록 (해결)
 7. 상태별 색상 다르게 (해결)
+8. 유저가 로그인한 상태로 질문등록 => 비밀번호 입력 X
+   유저가 비로그인한 상태로 질문등록 => 비밀번호 입력 O (해결 -> 자동입력으로..)
+9. 회원가입폼 만들기 (해결)
 
 
 
@@ -15,3 +18,13 @@
 4. manager, user 테이블 합치는 방향으로 type에서 manager, user, 비회원 구분
 5. 게시물 안의 내용중 줄바꿈기능 (줄바꿈이 \r\n  이나 \n으로 오는지 확인할것)
 6. answers.image_ur -> answer.image_url로 수정
+7. 문제등록페이지에서 문제등록이 안됨
+8. Question 테이블에서 isNew, isDetail, language 추가할것
+
+
+
+
+테스트 해볼것
+  - 비로그인
+    1. 비로그인으로 질문등록
+    2. 비로그인으로
