--- a/src/main/resources/templates/todo.txt
+++ b/src/main/resources/templates/todo.txt
@@ -13,13 +13,14 @@
 
 서버 수정요청
 1. 결제버튼 눌렀을때 : 상태 결제대기->풀이대기로 바꿀것
-2. 유저회원가입쪽 만들기
-3. /solution 쪽에서 리뷰가 있는 문제만 리턴할것 (state == 5), 최대 5개만
-4. manager, user 테이블 합치는 방향으로 type에서 manager, user, 비회원 구분
+2. 유저회원가입쪽 만들기(완료)
+3. /solution 페이지 밑부분의 리스트에 리뷰가 있는 문제만 리턴할것 (state == 5), 최대 5개만
+4. manager, user 테이블 합치는 방향으로 type에서 manager, user, 비회원 구분 (언젠가..)
 5. 게시물 안의 내용중 줄바꿈기능 (줄바꿈이 \r\n  이나 \n으로 오는지 확인할것)
 6. answers.image_ur -> answer.image_url로 수정
 7. 문제등록페이지에서 문제등록이 안됨
 8. Question 테이블에서 isNew, isDetail, language 추가할것
+9. 고객이 로그인시, 비밀번호를 틀렸을때 false 반환하지 않음.
 
 
 
@@ -27,4 +28,14 @@
 테스트 해볼것
   - 비로그인
     1. 비로그인으로 질문등록
-    2. 비로그인으로
+    2. 비로그인으로 리뷰평가
+    3. 비로그인으로 채팅
+
+  - 로그인 유저
+    1. 로그인 유저로 질문등록
+    2. 로그인 유저로 리뷰평가
+    3. 로그인으로 채팅
+
+  - 관리자 로그인
+    1. 답변등록
+    2. 채9.
